--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,71 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RetroSegaMaster</title>
+    <style>
+        body {
+            background-color: #000;
+            color: #fff;
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 36px;
+            text-align: center;
+        }
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+            text-align: justify;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .logo {
+            display: block;
+            margin: 0 auto;
+        }
+        .menu {
+            text-align: center;
+            margin-top: 30px;
+        }
+        .menu a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 20px;
+            margin: 0 10px;
+            border: 1px solid #fff;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+        }
+        .menu a:hover {
+            background-color: #fff;
+            color: #000;
+        }
+        footer {
+            text-align: center;
+            margin-top: 50px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="sega_logo.png" alt="Sega Logo" class="logo">
+        <h1>Welcome to RetroSegaMaster</h1>
+        <p>Explore the golden era of Sega gaming with RetroSegaMaster. We bring you the best games from classic Sega consoles like the Sega Genesis, Sega Saturn, and Sega Dreamcast. Relive your childhood memories and discover new favorites.</p>
+        <div class="menu">
+            <a href="#">Home</a>
+            <a href="#">Games</a>
+            <a href="#">Consoles</a>
+            <a href="#">About Us</a>
+        </div>
+    </div>
+    <footer>
+        &copy; 2024 RetroSegaMaster. All rights reserved.
+    </footer>
+</body>
+</html>
